Fix width on mobile

--- a/src/app/moraleassistant/home-page/home-page.component.scss
+++ b/src/app/moraleassistant/home-page/home-page.component.scss
@@ -25,7 +25,7 @@ h1 {
     margin-bottom: 1rem;
     font-size: 3rem;
     padding: 20px;
-    width: 700px;
+    width: 90%;
 }
 
 .site-wrap {
